--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+.icon-active{
+    transform: rotate(180deg);
+    transition: .5s ease all;
+}
+
+.icon-off{
+    transform: rotate(0deg);
+    transition: .5s ease all;
+}
