--- a/src/style.css
+++ b/src/style.css
@@ -11,3 +11,8 @@
     transform: rotate(0deg);
     transition: .5s ease all;
 }
+
+.icon-rotate{
+    transform: rotate(90deg);
+    transition: .5s ease all;
+}
