--- a/src/components/VrxDatePicker/VrxDatePicker.css
+++ b/src/components/VrxDatePicker/VrxDatePicker.css
@@ -1,7 +1,7 @@
 @layer components {
     .vrxdatepicker-helpertext-style{
-        @apply text-text-lightMode/60;
-        @apply dark:text-text-darkMode/60;
+        @apply text-text-light/60;
+        @apply dark:text-text-dark/60;
     }
 
     .vrxdatepicker-helpertext-invalid-style{
@@ -10,22 +10,37 @@
     }
 
     .vrxdatepicker-dropdown-bg-style{
-        @apply bg-bg-lightMode;
-        @apply dark:bg-bg-darkMode;
+        @apply bg-bg-light;
+        @apply dark:bg-bg-dark;
     }
 
     .vrxdatepicker-daypicker-text-style, .vrxdatepicker-monthpicker-text-style, .vrxdatepicker-yearpicker-text-style, .vrxdatepicker-timepicker-text-style{
-        @apply hover:bg-primary-200 hover:text-text-lightMode text-text-lightMode/80;
-        @apply dark:hover:bg-primary-500 dark:hover:text-text-darkMode dark:text-text-darkMode/80;
+        @apply hover:bg-primary-200 hover:text-text-light text-text-light/80;
+        @apply dark:hover:bg-primary-500 dark:hover:text-text-dark dark:text-text-dark/80;
     }
 
     .vrxdatepicker-yearpicker-header-text-style{
-        @apply text-text-lightMode/80;
-        @apply dark:text-text-darkMode/80;
+        @apply text-text-light/80;
+        @apply dark:text-text-dark/80;
     }
 
     .vrxdatepicker-timepicker-bg-style{
         @apply border-primary-200;
         @apply dark:border-primary-600;
+    }
+
+    .vrxdatepicker-daypicker-isselected-style{
+        @apply bg-secondary-700 text-text-light/80;
+        @apply dark:bg-secondary-500 dark:text-text-dark/80;
+    }
+
+    .vrxdatepicker-daypicker-istoday-style{
+        @apply text-secondary-400;
+        @apply dark:text-secondary-700;
+    }
+
+    .vrxdatepicker-daypicker-iscurrentmonth-style{
+        @apply text-primary-300;
+        @apply dark:text-primary-500;
     }
 }
