--- a/src/components/VrxDateRangePicker/VrxDateRangePicker.css
+++ b/src/components/VrxDateRangePicker/VrxDateRangePicker.css
@@ -1,17 +1,17 @@
 @layer components {
     .vrxdaterangepicker-dropdown-btn-style, .vrxdaterangepicker-dropdown-text-style{
-        @apply hover:bg-primary-200 hover:text-text-lightMode text-text-lightMode/80;
-        @apply dark:hover:bg-primary-500 dark:hover:text-text-darkMode dark:text-text-darkMode/80;
+        @apply hover:bg-primary-200 hover:text-text-light text-text-light/80;
+        @apply dark:hover:bg-primary-500 dark:hover:text-text-dark dark:text-text-dark/80;
     }
 
     .vrxdaterangepicker-dropdown-header-style{
-        @apply text-text-lightMode/80;
-        @apply dark:text-text-darkMode/80;
+        @apply text-text-light/80;
+        @apply dark:text-text-dark/80;
     }
 
     .vrxdaterangepicker-dropdown-bg-style{
-        @apply bg-bg-lightMode;
-        @apply dark:bg-bg-darkMode;
+        @apply bg-bg-light;
+        @apply dark:bg-bg-dark;
     }
 
 }
