--- a/src/components/VrxDatePicker/VrxDatePicker.css
+++ b/src/components/VrxDatePicker/VrxDatePicker.css
@@ -1,7 +1,7 @@
 @layer components {
     .vrxdatepicker-helpertext-style{
-        @apply text-text-light/60;
-        @apply dark:text-text-dark/60;
+        @apply text-base-content-light/60;
+        @apply dark:text-base-content-dark/60;
     }
 
     .vrxdatepicker-helpertext-invalid-style{
@@ -10,18 +10,18 @@
     }
 
     .vrxdatepicker-dropdown-bg-style{
-        @apply bg-bg-light;
-        @apply dark:bg-bg-dark;
+        @apply bg-base-light;
+        @apply dark:bg-base-dark;
     }
 
     .vrxdatepicker-daypicker-text-style, .vrxdatepicker-monthpicker-text-style, .vrxdatepicker-yearpicker-text-style, .vrxdatepicker-timepicker-text-style{
-        @apply hover:bg-primary-200 hover:text-text-light text-text-light/80;
-        @apply dark:hover:bg-primary-500 dark:hover:text-text-dark dark:text-text-dark/80;
+        @apply hover:bg-primary-200 hover:text-base-content-light text-base-content-light/80;
+        @apply dark:hover:bg-primary-500 dark:hover:text-base-content-dark dark:text-base-content-dark/80;
     }
 
     .vrxdatepicker-yearpicker-header-text-style{
-        @apply text-text-light/80;
-        @apply dark:text-text-dark/80;
+        @apply text-base-content-light/80;
+        @apply dark:text-base-content-dark/80;
     }
 
     .vrxdatepicker-timepicker-bg-style{
@@ -30,8 +30,8 @@
     }
 
     .vrxdatepicker-daypicker-isselected-style{
-        @apply bg-secondary-700 text-text-light/80;
-        @apply dark:bg-secondary-500 dark:text-text-dark/80;
+        @apply bg-secondary-700 text-base-content-light/80;
+        @apply dark:bg-secondary-500 dark:text-base-content-dark/80;
     }
 
     .vrxdatepicker-daypicker-istoday-style{
