--- a/src/components/VrxDateRangePicker/VrxDateRangePicker.css
+++ b/src/components/VrxDateRangePicker/VrxDateRangePicker.css
@@ -1,17 +1,17 @@
 @layer components {
     .vrxdaterangepicker-dropdown-btn-style, .vrxdaterangepicker-dropdown-text-style{
-        @apply hover:bg-primary-200 hover:text-text-light text-text-light/80;
-        @apply dark:hover:bg-primary-500 dark:hover:text-text-dark dark:text-text-dark/80;
+        @apply hover:bg-primary-200 hover:text-base-content-light text-base-content-light/80;
+        @apply dark:hover:bg-primary-500 dark:hover:text-base-content-dark dark:text-base-content-dark/80;
     }
 
     .vrxdaterangepicker-dropdown-header-style{
-        @apply text-text-light/80;
-        @apply dark:text-text-dark/80;
+        @apply text-base-content-light/80;
+        @apply dark:text-base-content-dark/80;
     }
 
     .vrxdaterangepicker-dropdown-bg-style{
-        @apply bg-bg-light;
-        @apply dark:bg-bg-dark;
+        @apply bg-base-light;
+        @apply dark:bg-base-dark;
     }
 
 }
