--- a/src/components/VrxTree/VrxTree.css
+++ b/src/components/VrxTree/VrxTree.css
@@ -1,7 +1,7 @@
 @layer components {
     .vrxtree-text-style{
         @apply text-primary-900;
-        @apply dark:text-text-dark;
+        @apply dark:text-base-content-dark;
     }
 
     .vrxtree-element-style{
