--- a/src/components/VrxDatePicker/VrxDatePicker.css
+++ b/src/components/VrxDatePicker/VrxDatePicker.css
@@ -1,7 +1,7 @@
 @layer components {
     .vrxdatepicker-helpertext-style{
-        @apply text-base-content-light/60;
-        @apply dark:text-base-content-dark/60;
+        @apply text-content-light;
+        @apply dark:text-content-dark;
     }
 
     .vrxdatepicker-helpertext-invalid-style{
@@ -15,13 +15,13 @@
     }
 
     .vrxdatepicker-daypicker-text-style, .vrxdatepicker-monthpicker-text-style, .vrxdatepicker-yearpicker-text-style, .vrxdatepicker-timepicker-text-style{
-        @apply hover:bg-primary-200 hover:text-base-content-light text-base-content-light/80;
-        @apply dark:hover:bg-primary-500 dark:hover:text-base-content-dark dark:text-base-content-dark/80;
+        @apply hover:bg-primary-300 text-content-light;
+        @apply dark:hover:bg-primary-500 dark:hover:text-content-dark dark:text-content-dark;
     }
 
     .vrxdatepicker-yearpicker-header-text-style{
-        @apply text-base-content-light/80;
-        @apply dark:text-base-content-dark/80;
+        @apply text-content-light;
+        @apply dark:text-content-dark;
     }
 
     .vrxdatepicker-timepicker-bg-style{
@@ -30,13 +30,13 @@
     }
 
     .vrxdatepicker-daypicker-isselected-style{
-        @apply bg-secondary-700 text-base-content-light/80;
-        @apply dark:bg-secondary-500 dark:text-base-content-dark/80;
+        @apply bg-secondary-300;
+        @apply dark:bg-secondary-700
     }
 
     .vrxdatepicker-daypicker-istoday-style{
-        @apply text-secondary-400;
-        @apply dark:text-secondary-700;
+        @apply text-secondary-700;
+        @apply dark:text-secondary-300;
     }
 
     .vrxdatepicker-daypicker-iscurrentmonth-style{
