--- a/src/components/VrxGrid/VrxGrid.css
+++ b/src/components/VrxGrid/VrxGrid.css
@@ -1,7 +1,7 @@
 @layer components {
 
     .vrxgrid-bg-style{
-        @apply bg-base-light;
+        @apply bg-base-light rounded-md;
         @apply dark:bg-base-dark;
     }
 
@@ -26,8 +26,8 @@
     }
 
     .vrxgrid-selected-style{
-        @apply bg-primary-100 hover:bg-primary-200 text-neutral-700 dark:text-neutral-50;
-        @apply dark:bg-primary-600 hover:dark:bg-primary-700;
+        @apply bg-primary-300 hover:bg-primary-400 text-content-light;
+        @apply dark:bg-primary-600 hover:dark:bg-primary-500 dark:text-content-dark;
     }
 
     .vrxgrid-editing-cell-style{
