--- a/src/components/VrxProgress/VrxProgress.css
+++ b/src/components/VrxProgress/VrxProgress.css
@@ -1,5 +1,5 @@
 @layer components {
-    .vrxprogress-default-style {
+    .vrxprogress-color {
         @apply border-t-neutral-500 dark:border-t-neutral-400;
     }
 }
